2015-11-05  Ola Jeppsson  <ola@adapteva.com>

	* multicore/domino.c (main): Move
	code from interrupt_handler to after call to e_idle().
	(interrupt_handler): Do nothing.

2015-11-04  Ola Jeppsson  <ola@adapteva.com>

	* multicore/domino.c: New test.

2015-11-04  Ola Jeppsson  <ola@adapteva.com>

	* multicore/e-lib-inl.h: Minimal inline implementation of
	e-lib.
	* multicore/multicore.exp: New file for multicore C tests.

2015-11-04  Ola Jeppsson  <ola@adapteva.com>

	* 64bmode/64bmode.exp: Rename from 64bmode/allinsn.exp. Save
	and restore global variables.
	* allinsn.exp: Save and restore global variables.
	* atomics/atomics.exp: Rename from atomic/allinsn.exp. Save
	and restore global variables.

2015-10-30  Ola Jeppsson  <ola@adapteva.com>

	* atomics/allinsn.exp: New file.
	* atomics/testset.cgs: New test.
	* atomics/testutils.inc: New test.

2015-10-28  Ola Jeppsson  <ola@adapteva.com>

	* fmul-denormal-exception.s: Run in virtual environment.
	* fmul64-denormal-exception.s: Likewise.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* allinsn.exp (global_ld_option): Set default value if
	none is provided by base board configuration.
	* 64bmode/allinsn.exp: Likewise.

2015-10-22  Ola Jeppsson  <ola@adapteva.com>

	* 64bmode/allinsn.exp: New file.
	* 64bmode/ldrbd-64bmode.cgs: New test.
	* 64bmode/ldrbd16-64bmode.cgs: New test.
	* 64bmode/ldrbp-64bmode.cgs: New test.
	* 64bmode/ldrbp16-64bmode.cgs: New test.
	* 64bmode/ldrbx-64bmode.cgs: New test.
	* 64bmode/ldrbx16-64bmode.cgs: New test.
	* 64bmode/ldrd-64bmode.cgs: New test.
	* 64bmode/ldrd16-64bmode.cgs: New test.
	* 64bmode/ldrdd-64bmode.cgs: New test.
	* 64bmode/ldrdd16-64bmode.cgs: New test.
	* 64bmode/ldrdp-64bmode.cgs: New test.
	* 64bmode/ldrdp16-64bmode.cgs: New test.
	* 64bmode/ldrdx-64bmode.cgs: New test.
	* 64bmode/ldrdx16-64bmode.cgs: New test.
	* 64bmode/ldrhd-64bmode.cgs: New test.
	* 64bmode/ldrhd16-64bmode.cgs: New test.
	* 64bmode/ldrhp-64bmode.cgs: New test.